--- a/net/cadaver/Makefile
+++ b/net/cadaver/Makefile
@@ -1,4 +1,4 @@
-# $OpenBSD: Makefile,v 1.20 2013/03/11 11:35:45 espie Exp $
+# $OpenBSD: Makefile,v 1.21 2013/06/01 14:18:40 ajacoutot Exp $
 
 COMMENT=		command-line WebDAV client
 
