--- a/print/gutenprint/Makefile
+++ b/print/gutenprint/Makefile
@@ -1,4 +1,4 @@
-# $OpenBSD: Makefile,v 1.35 2013/03/21 08:46:35 ajacoutot Exp $
+# $OpenBSD: Makefile,v 1.36 2013/06/17 19:28:37 ajacoutot Exp $
 
 COMMENT=		high quality print drivers for foomatic and CUPS
 
@@ -25,6 +25,7 @@ PERMIT_PACKAGE_CDROM=	Yes
 
 WANTLIB += asn1 c crypto cups cupsimage gssapi ijs krb5 m ncurses
 WANTLIB += pthread readline ssl z avahi-client avahi-common dbus-1
+WANTLIB += com_err heimbase heimntlm hx509 roken wind
 
 MASTER_SITES=		${MASTER_SITE_SOURCEFORGE:=gimp-print/}
 
