--- a/net/freeradius/Makefile
+++ b/net/freeradius/Makefile
@@ -1,4 +1,4 @@
-# $OpenBSD: Makefile,v 1.48 2013/06/12 20:36:34 brad Exp $
+# $OpenBSD: Makefile,v 1.49 2013/06/17 19:30:53 ajacoutot Exp $
 
 SHARED_ONLY=	Yes
 SHARED_LIBS +=  freeradius-radius    4.1      # .0.0
@@ -15,12 +15,15 @@ DISTNAME=	freeradius-server-$V
 EXTRACT_SUFX=	.tar.bz2
 
 PKGNAME-main=	freeradius-$V
-REVISION-main=  0
+REVISION-main=	1
 PKGNAME-iodbc=	freeradius-iodbc-$V
+REVISION-iodbc=	2
 PKGNAME-mysql=	freeradius-mysql-$V
-REVISION-mysql=	1
+REVISION-mysql=	2
 PKGNAME-pgsql=	freeradius-pgsql-$V
+REVISION-pgsql=	0
 PKGNAME-ldap=	freeradius-ldap-$V
+REVISION-ldap=	0
 
 CATEGORIES=	net security
 
@@ -34,13 +37,13 @@ MAINTAINER=	Pierre-Emmanuel Andre <pea@openbsd.org>
 # GPLv2 - LGPLv2 - OpenSSL exemption
 PERMIT_PACKAGE_CDROM=	Yes
 
-WANTLIB=	crypto ssl
+MODULES=	devel/gettext
 
 CONFIGURE_STYLE=autoconf dest
 AUTOCONF_VERSION=2.61
 # we only patch {WRKSRC}/configure.in so there's no need
 # to set AUTOCONF_DIR for the modules
-CFLAGS+=	-I${LOCALBASE}/include
+CFLAGS+=	-I${LOCALBASE}/include $$(krb5-config --cflags)
 LDFLAGS+=	-L${LOCALBASE}/lib
 CONFIGURE_ENV=	LDFLAGS="${LDFLAGS}"
 
@@ -55,8 +58,8 @@ CONFIGURE_ARGS=	${CONFIGURE_SHARED} \
 		--without-rlm_sql_oracle \
 		--without-rlm_sql_db2 \
 		--without-rlm_sql_unixodbc \
+		--enable-heimdal-krb5 \
 		--disable-ltdl-install \
-		--with-rlm-krb5-include-dir=/usr/include/kerberosV \
 		--with-system-libltdl
 
 TEST_TARGET=	tests
@@ -79,7 +82,7 @@ LIB_DEPENDS-main =	databases/gdbm \
 			devel/libtool,-ltdl \
 			devel/readline
 WANTLIB-main=		${WANTLIB} c com_err krb5 pcap pthread readline \
-			termcap gdbm>=3 ltdl>=4
+			termcap gdbm>=3 ltdl>=4 crypto ssl
 
 PSEUDO_FLAVORS=	no_ldap no_mysql no_pgsql no_iodbc
 FLAVOR?=		
@@ -91,6 +94,7 @@ MULTI_PACKAGES+=	-iodbc
 CONFIGURE_ARGS+=	--with-rlm_sql_iodbc
 LIB_DEPENDS-iodbc=	databases/iodbc
 WANTLIB-iodbc=		iodbc>=2 pthread
+RUN_DEPENDS-iodbc=	#empty
 .endif
 
 .if ${FLAVOR:Mno_ldap}
@@ -99,8 +103,10 @@ CONFIGURE_ARGS+=	--without-rlm_ldap
 MULTI_PACKAGES+=	-ldap
 LIB_DEPENDS-ldap=	databases/openldap \
 			${BASE_PKGPATH}
-WANTLIB-ldap=		${WANTLIB} sasl2 asn1 com_err gssapi krb5 \
-			lber>=8 ldap_r>=8 freeradius-radius>=1 pthread
+WANTLIB-ldap=		crypto ssl sasl2 asn1 com_err gssapi krb5 \
+			lber>=8 ldap_r>=8 freeradius-radius>=1 pthread \
+			heimbase heimntlm hx509 roken wind
+RUN_DEPENDS-ldap=	#empty
 .endif
 
 .if ${FLAVOR:Mno_mysql}
@@ -108,7 +114,8 @@ CONFIGURE_ARGS+=	--without-rlm_sql_mysql
 .else
 MULTI_PACKAGES+=	-mysql
 LIB_DEPENDS-mysql=	databases/mysql
-WANTLIB-mysql=		${WANTLIB} m pthread z mysqlclient_r>=16
+WANTLIB-mysql=		crypto ssl m pthread z mysqlclient_r>=16
+RUN_DEPENDS-mysql=	#empty
 .endif
 
 .if ${FLAVOR:Mno_pgsql}
@@ -118,6 +125,7 @@ MULTI_PACKAGES+=	-pgsql
 CONFIGURE_ARGS+=	--with-rlm-sql-postgresql-include-dir=${LOCALBASE}/include/postgresql
 LIB_DEPENDS-pgsql=	databases/postgresql
 WANTLIB-pgsql=		pq>=2
+RUN_DEPENDS-pgsql=	#empty
 .endif
 
 .for i in ${MULTI_PACKAGES:N-main}
