sync WANTLIB and remove patches to handle e2fsprogs/libuuid changes. ok aja
Written by: Stuart Henderson <sthen@openbsd.org>

Conflicts:
	lang/io/Makefile
	x11/gnome/documents/Makefile
	x11/gnome/gnote/Makefile

--- a/x11/gnome/gnote/Makefile
+++ b/x11/gnome/gnote/Makefile
@@ -33,8 +33,7 @@ MODULES=		devel/dconf \
 			devel/gettext \
 			x11/gnome
 
-BUILD_DEPENDS=		devel/boost>=1.42.0p6 \
-			devel/desktop-file-utils
+BUILD_DEPENDS=		devel/boost>=1.42.0p6
 LIB_DEPENDS=		sysutils/e2fsprogs>=1.42.7 \
 			textproc/libxslt \
 			x11/gnome/libsecret>=0.10 \
