--- a/bitrig/bitrig-gdb/Makefile
+++ b/bitrig/bitrig-gdb/Makefile
@@ -4,6 +4,7 @@ COMMENT=	GNU debugger
 CATEGORIES=	bitrig
 
 REALDISTNAME = 	gdb-7.6
+REVISION =	0
 DISTNAME =	bitrig-${REALDISTNAME}
 DISTFILES =	${REALDISTNAME}.tar.gz
 EXTRACT_ONLY =	${REALDISTNAME}.tar.gz
