Allow this to build with clang.
Clang does not recogizie -R as a linker flag and does not pass
it thru, so pass -Wl,-rpath,<...> instead.

--- a/net/mtr/Makefile
+++ b/net/mtr/Makefile
@@ -20,7 +20,8 @@ MASTER_SITES=	ftp://ftp.bitwizard.nl/mtr/
 
 CONFIGURE_STYLE= gnu
 CONFIGURE_ENV=	CPPFLAGS="-I${LOCALBASE}/include/bind" \
-		LDFLAGS="-L${LOCALBASE}/lib -L${LOCALBASE}/lib/libbind -R${LOCALBASE}/lib/libbind -lbind"
+		LDFLAGS="-L${LOCALBASE}/lib -L${LOCALBASE}/lib/libbind -Wl,-rpath,${LOCALBASE}/lib/libbind -lbind"
+
 
 FLAVORS=	gtk
 FLAVOR?=
