--- a/lang/php/Makefile
+++ b/lang/php/Makefile
@@ -1,7 +1,7 @@
-# $OpenBSD: Makefile,v 1.2 2012/11/28 20:51:39 sthen Exp $
+# $OpenBSD: Makefile,v 1.3 2013/08/08 18:54:54 robert Exp $
 
 SUBDIR =
-SUBDIR += 5.2
 SUBDIR += 5.3
+SUBDIR += 5.4
 
 .include <bsd.port.subdir.mk>
