--- a/plan9/rc/Makefile
+++ b/plan9/rc/Makefile
@@ -1,4 +1,4 @@
-# $OpenBSD: Makefile,v 1.20 2013/03/11 11:37:53 espie Exp $
+# $OpenBSD: Makefile,v 1.21 2013/08/09 23:17:56 landry Exp $
 
 COMMENT=	shell (clone of plan9 shell)
 
