--- a/security/pwsafe/Makefile
+++ b/security/pwsafe/Makefile
@@ -1,4 +1,4 @@
-# $OpenBSD: Makefile,v 1.12 2013/03/11 11:41:27 espie Exp $
+# $OpenBSD: Makefile,v 1.13 2013/08/12 21:55:35 rpe Exp $
 
 COMMENT=		program that manages encrypted password databases
 DISTNAME=		pwsafe-0.2.0
@@ -10,8 +10,7 @@ HOMEPAGE=		http://nsd.dyndns.org/pwsafe/
 #GPL
 PERMIT_PACKAGE_CDROM=	Yes
 
-WANTLIB=		Xmu m X11 ncurses crypto c stdc++ SM readline ICE \
-			curses
+WANTLIB=		m ncurses crypto c stdc++ readline curses
 LIB_DEPENDS=		devel/readline
 
 MASTER_SITES=		${HOMEPAGE}releases/
@@ -19,6 +18,16 @@ MASTER_SITES=		${HOMEPAGE}releases/
 CONFIGURE_STYLE=        gnu
 USE_GMAKE=		Yes
 USE_GROFF =		Yes
+
+FLAVORS=		no_x11
+FLAVOR?=
+
+.if ${FLAVOR:Mno_x11}
+CONFIGURE_ARGS+=	--without-x
+.else
+WANTLIB+=		Xmu X11 SM ICE
+.endif
+
 NO_TEST=		Yes
 
 .include <bsd.port.mk>
