make lang/spidermonkey build on Bitrig

--- a/lang/spidermonkey/Makefile
+++ b/lang/spidermonkey/Makefile
@@ -60,8 +60,10 @@ CONFIGURE_ARGS =	--with-pthreads \
 CONFIGURE_ENV +=	SO_VERSION="${SO_VERSION}" \
 			LIBS=-lncurses \
 			MOZILLA_VERSION="${MOZILLA_VERSION}" \
-			CPPFLAGS=-DJS_C_STRINGS_ARE_UTF8
+			CPPFLAGS=-DJS_C_STRINGS_ARE_UTF8 \
+			CPPFLAGS="-I${LOCALBASE}/include" LDFLAGS="-L${LOCALBASE}/lib"
 
+MODGNU_CONFIG_GUESS_DIRS =	${WRKDIST}/build/autoconf
 
 SUBST_VARS +=	MOZILLA_VERSION
 
