--- a/mail/mozilla-thunderbird/Makefile
+++ b/mail/mozilla-thunderbird/Makefile
@@ -1,26 +1,23 @@
-# $OpenBSD: Makefile,v 1.175 2013/08/08 07:08:47 landry Exp $
+# $OpenBSD: Makefile,v 1.176 2013/09/19 13:37:50 landry Exp $
 
 COMMENT-main =		Mozilla e-mail, rss and usenet client
 COMMENT-lightning =	Mozilla Thunderbird calendar extension
 COMMENT-enigmail =	Mozilla Thunderbird GnuPG extension
-BROKEN-sparc64 =	https://bugzilla.mozilla.org/show_bug.cgi?id=577056
 
 # Don't forget to bump mail/thunderbird-i18n after updates.
 
-MOZILLA_VERSION =	17.0.8
-MOZILLA_BRANCH =	esr17
+MOZILLA_VERSION =	24.0
+MOZILLA_BRANCH =	esr24
 MOZILLA_PROJECT =	thunderbird
 MOZILLA_CODENAME =	mail
 
 MULTI_PACKAGES =	-main -lightning -enigmail
 PKGNAME-main =		${PKGNAME}
-PKGNAME-lightning =	lightning-1.9beta1
-ENIG_V =		1.5.1
+PKGNAME-lightning =	lightning-2.6beta3
+ENIG_V =		1.5.2
 PKGNAME-enigmail =	enigmail-${ENIG_V}
 EPOCH-lightning =	0
 EPOCH-enigmail =	0
-REVISION-lightning =	8
-REVISION-enigmail =	6
 
 HOMEPAGE =	http://www.mozilla.org/thunderbird/
 
@@ -30,13 +27,13 @@ DISTFILES +=	${MOZILLA_PROJECT}-${MOZILLA_VERSION}.source.tar.bz2 \
 		enigmail-${ENIG_V}.tar.gz:0
 EXTRACT_CASES =	enigmail-*.tar.gz) ${GZIP_CMD} -dc ${FULLDISTDIR}/$$archive | tar -C comm-${MOZILLA_BRANCH}/mailnews/extensions/ -xf -;;
 
-SO_VERSION =	27.0
+SO_VERSION =	28.0
 # NOTE: Must bump minor version if any shlib's are removed from the
 # components dir to avoid pkg_add -r issues.
 
-MOZILLA_LIBS = ldap60 ldif60 mozalloc mozgnome prldap60 xpcom xul calbasecomps \
-	enigmime-${XPCOM_ABI}-gcc3 subprocess-${XPCOM_ABI}-gcc3
-#.if ${FLAVOR:Mdebug}
+MOZILLA_LIBS = ldap60 ldif60 mozalloc mozgnome prldap60 xul calbasecomps \
+	subprocess-${XPCOM_ABI}-gcc3
+#.if ${FLAVOR:L:Mdebug}
 #MOZILLA_LIBS +=	addrbook bayesflt fts3tok mailview mime mimeemitter msgbase \
 #	msgcompose msgdb msgimap msglocal msgmdn msgnews vcard msgbaseutil
 #.endif
@@ -48,6 +45,13 @@ PERMIT_PACKAGE_CDROM=	Yes
 
 MODULES =	www/mozilla devel/gettext lang/python
 MODPY_RUNDEP =	No
+
+# necessary glue to build with the correct compiler after fx 17
+MODULES +=		gcc4 lang/clang
+MODGCC4_ARCHS =		powerpc sparc64 alpha
+MODGCC4_LANGS =		c c++
+MODCLANG_ARCHS =	i386 amd64
+MODCLANG_LANGS =	c c++
 
 # Regression tests are too hard to adapt to run here
 NO_TEST =	Yes
@@ -62,6 +66,7 @@ CXX =			g++
 MODGNU_CONFIG_GUESS_DIRS +=	${WRKSRC}/build/autoconf \
 				${WRKSRC}/ldap/sdks/c-sdk/config/autoconf \
 				${WRKSRC}/mozilla/build/autoconf \
+				${WRKSRC}/mozilla/intl/icu/source \
 				${WRKSRC}/mozilla/ipc/chromium/src/third_party/libevent \
 				${WRKSRC}/mozilla/js/src/build/autoconf \
 				${WRKSRC}/mozilla/js/src/ctypes/libffi \
@@ -69,26 +74,26 @@ MODGNU_CONFIG_GUESS_DIRS +=	${WRKSRC}/build/autoconf \
 				${WRKSRC}/mozilla/modules/freetype2/builds/unix \
 				${WRKSRC}/mozilla/nsprpub/build/autoconf \
 				${WRKSRC}/mozilla/toolkit/crashreporter/google-breakpad/autotools \
-				${WRKSRC}/mozilla/tools/profiler/libunwind/src/aux_ \
-				${WRKSRC}/mozilla/tools/profiler/libunwind/src/config
+				${WRKSRC}/mozilla/toolkit/crashreporter/google-breakpad/src/third_party/glog
 
 CONFIGURE_STYLE =	autoconf no-autoheader
-# to remove in 18
-CONFIGURE_ARGS +=	--with-system-jpeg=${LOCALBASE}
-WANTLIB +=	jpeg
 
 LIB_DEPENDS-lightning = STEM->=${MOZILLA_VERSION:S/b/beta/}:${BUILD_PKGPATH},-main
-WANTLIB-lightning =	lib/${MOZILLA_PROJECT}-${MOZILLA_VER}/xpcom \
-			lib/${MOZILLA_PROJECT}-${MOZILLA_VER}/xul \
+WANTLIB-lightning =	lib/${MOZILLA_PROJECT}-${MOZILLA_VER}/xul \
 			lib/${MOZILLA_PROJECT}-${MOZILLA_VER}/mozalloc \
 			c m stdc++ nspr4 plc4 plds4 pthread
 
 RUN_DEPENDS-enigmail =	security/gnupg
-LIB_DEPENDS-enigmail =	${LIB_DEPENDS-lightning}
-WANTLIB-enigmail =	${WANTLIB-lightning}
+LIB_DEPENDS-enigmail =
+WANTLIB-enigmail =
 
 # build lightning xpi
 CONFIGURE_ARGS +=	--enable-calendar
+
+# to be able to link when building with clang on i386
+.if ${MACHINE_ARCH} == "i386" || ${MACHINE_ARCH} == "powerpc"
+CONFIGURE_ARGS +=       --disable-debug-symbols
+.endif
 
 ALL_TARGET =	default
 
@@ -100,7 +105,6 @@ post-build:
 	# build enigmail
 	cd ${WRKSRC}/${ENIGMAIL_DIR} && ./makemake -o ${WRKBUILD} -r
 	cd ${WRKBUILD}/${ENIGMAIL_DIR} && ${SETENV} ${MAKE_ENV} ${MAKE_PROGRAM}
-	cd ${WRKBUILD}/mozilla/dist/bin/chrome/enigmail && zip -r ../enigmail.jar .
 	cd ${WRKBUILD}/${ENIGMAIL_DIR} && ${SETENV} ${MAKE_ENV} ${MAKE_PROGRAM} xpi
 
 # needed for the naming of the enigmail lib
@@ -118,12 +122,12 @@ GNU_ARCH =	${MACHINE_ARCH:S/amd64/x86_64/}
 GUIDS =	gdata-provider {a62ef8ec-5fdc-40c2-873c-223b8a6925cc} \
 	lightning {e2fda1a4-762b-4020-b5ad-a41df1933103} \
 	calendar-timezones calendar-timezones@mozilla.org \
-	../bin/enigmail-1.5-bitrig-${GNU_ARCH} {847b3a00-7ab1-11d4-8f02-006008948af5}
+	../bin/enigmail-${ENIG_V}-bitrig-${GNU_ARCH} {847b3a00-7ab1-11d4-8f02-006008948af5}
 
 EXTDIR =	${PREFIX}/lib/${MOZILLA_PROJECT}-${MOZILLA_VER}/extensions/
 post-install:
 .for xpi guid in ${GUIDS}
-	${UNZIP} -oq ${WRKBUILD}/mozilla/dist/xpi-stage/${xpi}.xpi -d ${EXTDIR}/${guid}
+	${UNZIP} -oq ${WRKBUILD}/mozilla/dist/xpi-stage/${xpi}*.xpi -d ${EXTDIR}/${guid}
 .endfor
 	# install desktop file
 	${INSTALL_DATA_DIR} ${PREFIX}/share/applications/ ; \
@@ -133,5 +137,8 @@ post-install:
 	${INSTALL_DATA_DIR} ${PREFIX}/share/pixmaps/
 	${INSTALL_DATA} ${PREFIX}/lib/${MOZILLA_PROJECT}-${MOZILLA_VER}/chrome/icons/default/default256.png \
 		${PREFIX}/share/pixmaps/${MOZILLA_PROJECT}.png
+
+	# remove useless empty dirs ?
+	rm -Rf ${PREFIX}/lib/${MOZILLA_PROJECT}-${MOZILLA_VER}/modules/
 
 .include <bsd.port.mk>
