instead of www/mod_perl use www/ap2-mod_perl

--- a/net/p5-RPC-XML/Makefile
+++ b/net/p5-RPC-XML/Makefile
@@ -14,7 +14,7 @@ PERMIT_PACKAGE_CDROM=	Yes
 
 RUN_DEPENDS=		www/p5-libwww \
 			textproc/p5-XML-Parser
-TEST_DEPENDS=	www/mod_perl \
+TEST_DEPENDS=	www/ap2-mod_perl \
 			devel/p5-DateTime-Format-ISO8601 \
 			devel/p5-Net-Server \
 			devel/p5-Test-Pod \
