--- a/x11/gnome/gjs/Makefile
+++ b/x11/gnome/gjs/Makefile
@@ -1,16 +1,11 @@
-# $OpenBSD: Makefile,v 1.21 2013/08/10 12:43:03 ajacoutot Exp $
+# $OpenBSD: Makefile,v 1.22 2013/09/26 06:29:09 jasper Exp $
 
 SHARED_ONLY=		Yes
 
 COMMENT=		Javascript bindings for GNOME
 
 GNOME_PROJECT=		gjs
-GNOME_VERSION=		1.36.1
-REVISION=		0
-
-MASTER_SITES0=		http://distfiles.bsdfrog.org/
-PATCH_DIST_STRIP=	-p1
-PATCHFILES=		gjs-gnome-3-8-js17.patch:0
+GNOME_VERSION=		1.38.1
 
 REVISION=		0
 
@@ -43,8 +38,6 @@ LIB_DEPENDS=		devel/gobject-introspection \
 			devel/spidermonkey>=17.0,<18.0 \
 			devel/readline
 
-AUTOCONF_VERSION=	2.63
-CONFIGURE_STYLE=	autoconf
 CONFIGURE_ARGS=		--disable-static
 CONFIGURE_ENV=		"CFLAGS=-Wno-error=format=2 ${CFLAGS}"
 
